# itoi

./: .gitignore  CMakeLists.txt  README.md  main.cpp
borders/: BorderEffectAction.cpp  BorderEffectAction.h  CopyBorderEffect.cpp  CopyBorderEffect.h  MirrorBorderEffect.cpp  MirrorBorderEffect.h  ZeroBorderEffect.cpp  ZeroBorderEffect.h
descriptors/: Basket.cpp  Basket.h  Descriptor.cpp  Descriptor.h  DescriptorUtil.cpp  DescriptorUtil.h  HistogramCreator.cpp  HistogramCreator.h  HistogramDescriptor.cpp  HistogramDescriptor.h  HistogramProcessor.cpp  HistogramProcessor.h  MatchData.cpp  MatchData.h  PatchDescriptor.cpp  PatchDescriptor.h  PatchProcessor.cpp  PatchProcessor.h  RotationInvariantProcessor.cpp  RotationInvariantProcessor.h
filters/: FiltersImplementation.cpp  FiltersImplementation.h  KernelFactory.cpp  KernelFactory.h
image/: DoubleImage.cpp  DoubleImage.h  Image.cpp  Image.h
labs/: lab1.cpp  lab1.h  lab2.cpp  lab2.h  lab3.cpp  lab3.h  lab4.cpp  lab4.h  lab5.cpp  lab5.h
octaves/: Octave.cpp  Octave.h  OctaveElement.cpp  OctaveElement.h  OctaveFactory.cpp  OctaveFactory.h
points/: DataSaver.cpp  DataSaver.h  DetectorUtil.cpp  DetectorUtil.h  Harris.cpp  Harris.h  InterestingPoint.cpp  InterestingPoint.h  Moravec.cpp  Moravec.h
